feat: 로고페이지 퍼블리싱 완료

--- a/apps/user/app/globals.css
+++ b/apps/user/app/globals.css
@@ -122,4 +122,15 @@
   body {
     @apply bg-background text-foreground;
   }
+  .font-inter {
+    font-family: var(--font-inter), sans-serif;
+  }
+
+  .font-roboto {
+    font-family: var(--font-roboto), sans-serif;
+  }
+
+  .font-monoton {
+    font-family: var(--font-monoton), cursive;
+  }
 }
