feat: loginpage 퍼블리싱 완료

--- a/apps/user/app/globals.css
+++ b/apps/user/app/globals.css
@@ -133,4 +133,8 @@
   .font-monoton {
     font-family: var(--font-monoton), cursive;
   }
+
+  .font-poppins {
+    font-family: var(--font-poppins), sans-serif;
+  }
 }
